# 30HW

./: dump-postgres1-202301160024  pyproject.toml
ads/: urls.py
ads/views/: ad.py  selection.py
project/: settings.py
users/: models.py
