[tool.poetry]
name = "27hw"
version = "0.1.0"
description = ""
authors = ["Masyanja <masyanja@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django-admin = "^2.0.1"
django = "^4.1.5"
psycopg = "^3.1.7"
psycopg2 = "^2.9.5"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
psycopg2-binary = "^2.9.5"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
